# mono

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: windows.yml
apps/macos/: .env.example  ADI.icns  Info.plist  README.md  build.sh  icon-gen.swift  publish.sh  release.sh
apps/macos/Sources/: ADIApp.swift  ADILogo.swift  AppModel.swift  ContentView.swift  Core.swift  (+8 more)
apps/oauth-router/: .dev.vars.example  .gitignore  README.md  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/windows/: README.md  build.sh
crates/adi-agents/: Cargo.toml
crates/adi-agents/src/: agent.rs  arguments.rs  backend.rs  error.rs  events.rs  lib.rs  progress.rs  run.rs  wasm.rs
crates/adi-agents/src/backends/: claude_stream.rs  detached.rs  mod.rs
crates/adi-agents/src/backends/harness/: adi_loop.rs  claude_sdk.rs  conversation.rs  mod.rs
crates/adi-agents/src/backends/process/: claude.rs  codex.rs  mod.rs
crates/adi-agents/src/backends/pty/: claude.rs  codex.rs  mod.rs
crates/adi-agents/src/backends/tmux/: claude.rs  codex.rs  mod.rs
crates/adi-app/: Cargo.toml  README.md  build.rs  hive.example.yaml
crates/adi-app/src/: api.rs  http.rs  main.rs  scan.rs
crates/adi-app/web/: index.html
crates/adi-cli/: Cargo.toml
crates/adi-cli/src/: agents.rs  dns.rs  events.rs  format.rs  main.rs  projects.rs  secrets.rs  tasks.rs  tools.rs  triggers.rs  update.rs
crates/adi-config/: Cargo.toml  README.md
crates/adi-config/src/: error.rs  file.rs  fsutil.rs  launch.rs  layout.rs  lib.rs  module.rs
crates/adi-core/: Cargo.toml
crates/adi-core/src/: app.rs  commands.rs  dns.rs  launchd.rs  lib.rs  paths.rs  proc.rs  service.rs  status.rs  update.rs
crates/adi-css/: Cargo.toml  README.md  build.rs
crates/adi-css/scss/: _base.scss  _components.scss  _mixins.scss  _tokens.scss  _utilities.scss  adi.scss
crates/adi-css/src/: lib.rs
crates/adi-dns/: COMPARISON.md  Cargo.toml  README.md  adi-dns.toml
crates/adi-dns/deploy/coredns/: Corefile
crates/adi-dns/deploy/os-integration/: linux-install.sh  macos-install.sh  windows-install.ps1
crates/adi-dns/deploy/supervisor/: adi-dns.conf
crates/adi-dns/deploy/windows/: adi-dns.winsw.xml
crates/adi-dns/src/: config.rs  landing.rs  main.rs  os_routing.rs  status.rs
crates/adi-events/: Cargo.toml
crates/adi-events/src/: catalog.rs  lib.rs
crates/adi-fs/: Cargo.toml  README.md
crates/adi-fs/src/: error.rs  fsutil.rs  lib.rs
crates/adi-hive/: Cargo.toml  README.md  hive.yaml
crates/adi-hive/src/: config.rs  main.rs  notfound.rs  proxy.rs  runner.rs  status.rs
crates/adi-hooks/: Cargo.toml
crates/adi-hooks/src/: error.rs  hook.rs  lib.rs  terminal.rs  workspace.rs
crates/adi-mcp/: Cargo.toml
crates/adi-mcp/src/: features.rs  files.rs  lib.rs  main.rs  projects.rs  server.rs  status.rs  tasks.rs
crates/adi-mesh/: Cargo.toml
crates/adi-mesh/src/: client.rs  config.rs  daemon.rs  host.rs  identity.rs  lib.rs  main.rs  protocol.rs  ticket.rs  tunnel.rs
crates/adi-osext/: Cargo.toml
crates/adi-osext/src/: lib.rs
crates/adi-ports-manager/: Cargo.toml  README.md
crates/adi-ports-manager/src/: config.rs  error.rs  lib.rs  lock.rs  probe.rs  registry.rs  template.rs
crates/adi-projects/: Cargo.toml
crates/adi-projects/src/: error.rs  lib.rs  project.rs
crates/adi-pty/: Cargo.toml
crates/adi-secrets/: Cargo.toml  README.md
crates/adi-secrets/src/: crypto.rs  error.rs  lib.rs  secret.rs
crates/adi-tasks/: Cargo.toml
crates/adi-tasks/src/: error.rs  events.rs  lib.rs  task.rs
crates/adi-tools/: Cargo.toml
crates/adi-tools/src/: error.rs  lib.rs  run.rs  system.rs  tool.rs
crates/adi-triggers/: Cargo.toml
crates/adi-triggers/src/: dispatch.rs  error.rs  fire.rs  lib.rs  presets.rs  run.rs  supervisor.rs  trigger.rs
crates/adi-update/: Cargo.toml
crates/adi-update/src/: engine.rs  lib.rs  manifest.rs  settings.rs  shell.rs  state.rs  version.rs
crates/adi-webapp/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
crates/adi-webapp-api/: Cargo.toml  README.md
crates/adi-webapp-api/src/: handlers.rs  lib.rs  types.rs
crates/adi-webapp-api/src/handlers/: agents.rs  dashboards.rs  files.rs  fs.rs  health.rs  mesh.rs  meta.rs  mod.rs  ports.rs  projects.rs  response.rs  secrets.rs  services.rs  tasks.rs  tools.rs  triggers.rs  workspaces.rs
crates/adi-webapp-api/templates/dashboard/: README.md
crates/adi-webapp-api/templates/dashboard/backend/: index.ts
crates/adi-webapp-api/templates/dashboard/backend/routes/: status.ts
crates/adi-webapp-api/templates/dashboard/frontend/: index.html  index.ts
crates/adi-webapp-api/templates/dashboard/frontend/modules/: status.ts
crates/adi-webapp/src/: fetch.rs  highlight.rs  icons.rs  main.rs  markdown.rs  routing.rs  state.rs  store_browser.rs  tree.rs  ui.rs
crates/adi-webapp/src/pages/: agents.rs  dashboards.rs  hive.rs  mesh.rs  meta.rs  mod.rs  overview.rs  ports.rs  project_detail.rs  projects.rs  secrets.rs  store_file.rs  tasks.rs  tools.rs  triggers.rs  workspaces.rs
crates/adi-webapp/src/pages/agents/: actions.rs  code.rs  form.rs  mod.rs
crates/adi-webapp/src/pages/project_detail/: agents_panel.rs  files.rs  mod.rs  secrets_panel.rs  services.rs  subprojects.rs  tasks.rs  tools_panel.rs  triggers.rs
crates/adi-webapp/styles/: main.scss
crates/adi-workforce/: Cargo.toml
crates/adi-workforce/src/: config_value.rs  core.rs  dispatch.rs  employee_registry.rs  filesystem.rs  lib.rs  llm.rs  loop_run_context.rs  loop_runner_plugin.rs  plugin.rs  queue.rs  sdk_log.rs  stats.rs  tool_def.rs  trigger.rs  variable.rs  wasm_config_loader.rs
crates/adi-workforce/src/bundled/: claude.rs  env.rs  inbox.rs  mod.rs  sandbox.rs  shell.rs  tasks.rs
docs/: adi-agents.md  adi-update.md  adi-workforce.md
employees/: README.md  hello.ts  package-lock.json  package.json  tsconfig.json
examples/workforce/: package.json  probe.ts
scripts/: build-app.sh  dev.sh
sdk/workforce/: build.mjs  host.d.ts  index.d.ts  index.ts  package.json  workforce.wit
(+14 files in other folders)
