[workspace]
resolver = "3"
members = ["crates/*"]
# adi-webapp targets wasm32 and is built by Trunk, never by a native `cargo build`. Keep
# it out of the default set so `cargo build`/`cargo test` (no `--workspace`) skip it; it
# stays a member so it still inherits workspace metadata/lints and builds with `-p`.
default-members = [
    "crates/adi-app",
    "crates/adi-cli",
    "crates/adi-config",
    "crates/adi-core",
    "crates/adi-css",
    "crates/adi-dns",
    "crates/adi-fs",
    "crates/adi-hive",
    "crates/adi-mesh",
    "crates/adi-ports-manager",
    "crates/adi-projects",
    "crates/adi-webapp-api",
]

# Shared metadata inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["mgorunuch <alkudel.ui@gmail.com>"]
repository = "https://github.com/mgorunuch/adi-family"

# Central dependency versions. Member crates reference these with
# `some-dep = { workspace = true }` so versions stay aligned repo-wide.
[workspace.dependencies]
# Internal crates
adi-config = { path = "crates/adi-config" }
adi-core = { path = "crates/adi-core" }
adi-css = { path = "crates/adi-css" }
adi-fs = { path = "crates/adi-fs" }
adi-mesh = { path = "crates/adi-mesh" }
adi-ports-manager = { path = "crates/adi-ports-manager" }
adi-projects = { path = "crates/adi-projects" }
adi-webapp-api = { path = "crates/adi-webapp-api" }

# External crates (add as needed)
clap = { version = "4", features = ["derive"] }
# Peer-to-peer QUIC transport with relay-assisted NAT traversal and dial-by-EndpointId
# discovery; the backbone of adi-mesh.
iroh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# anyhow = "1"
# thiserror = "2"
# tokio = { version = "1", features = ["full"] }
# tracing = "0.1"

# Lints applied workspace-wide; member crates opt in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Faster incremental builds while keeping release builds optimized.
[profile.release]
lto = "thin"
codegen-units = 1
