[workspace]
resolver = "3"
members = ["crates/*"]
# adi-webapp targets wasm32 and is built by Trunk, never by a native `cargo build`. Keep
# it out of the default set so `cargo build`/`cargo test` (no `--workspace`) skip it; it
# stays a member so it still inherits workspace metadata/lints and builds with `-p`.
default-members = [
    "crates/adi-agents",
    "crates/adi-app",
    "crates/adi-cli",
    "crates/adi-config",
    "crates/adi-core",
    "crates/adi-css",
    "crates/adi-dns",
    "crates/adi-events",
    "crates/adi-fs",
    "crates/adi-hive",
    "crates/adi-hooks",
    "crates/adi-mesh",
    "crates/adi-ports-manager",
    "crates/adi-projects",
    "crates/adi-secrets",
    "crates/adi-tasks",
    "crates/adi-tools",
    "crates/adi-triggers",
    "crates/adi-update",
    "crates/adi-webapp-api",
    "crates/adi-workforce",
]

# Shared metadata inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
# Business Source License 1.1 (see LICENSE); BUSL-1.1 is its SPDX identifier.
license = "BUSL-1.1"
authors = ["mgorunuch <alkudel.ui@gmail.com>"]
repository = "https://github.com/adi-family/mono"

# Central dependency versions. Member crates reference these with
# `some-dep = { workspace = true }` so versions stay aligned repo-wide.
[workspace.dependencies]
# Internal crates
adi-agents = { path = "crates/adi-agents" }
adi-config = { path = "crates/adi-config" }
adi-core = { path = "crates/adi-core" }
adi-css = { path = "crates/adi-css" }
adi-events = { path = "crates/adi-events" }
adi-fs = { path = "crates/adi-fs" }
adi-hooks = { path = "crates/adi-hooks" }
adi-mesh = { path = "crates/adi-mesh" }
adi-osext = { path = "crates/adi-osext" }
adi-ports-manager = { path = "crates/adi-ports-manager" }
adi-projects = { path = "crates/adi-projects" }
adi-secrets = { path = "crates/adi-secrets" }
adi-tasks = { path = "crates/adi-tasks" }
adi-tools = { path = "crates/adi-tools" }
adi-triggers = { path = "crates/adi-triggers" }
adi-update = { path = "crates/adi-update" }
adi-webapp-api = { path = "crates/adi-webapp-api" }
adi-workforce = { path = "crates/adi-workforce" }

# External crates (add as needed)
# Authenticated encryption + base64 for adi-secrets' at-rest secret storage.
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
# Peer-to-peer QUIC transport with relay-assisted NAT traversal and dial-by-EndpointId
# discovery; the backbone of adi-mesh.
iroh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Reflects `#[derive(JsonSchema)]` types into JSON Schema — the source of truth for the payload
# shape of every platform event (see adi-tasks / adi-agents event catalogs).
schemars = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
# Lints applied workspace-wide; member crates opt in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Faster incremental builds while keeping release builds optimized.
[profile.release]
lto = "thin"
codegen-units = 1
