[package]
name = "adi-agents"
description = "Agent definitions and run adapters for the adi platform: reusable executor:engine manifests under ~/.adi/mono/agents, interactive tmux Claude/Codex sessions, and detached headless process Claude/Codex runs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }
adi-workforce = { workspace = true }
# Agent lifecycle changes (run started, saved, deleted, stopped) publish `adi.agents.*` events
# onto the shared bus for event triggers to react to; this crate never learns who subscribes.
adi-events = { workspace = true }
# An agent materializes its own `.bin` of enabled tools onto its PATH at launch.
adi-tools = { workspace = true }
# Not used at runtime: this crate assembles the *whole* platform event catalog (task events +
# agent events) in `event_catalog`, so it needs the `adi.tasks.*` payload types + `event_types`.
# It is the lowest crate that can see every producer's payload type (adi-events sits below both).
adi-tasks = { workspace = true }
# A run inherits its agent's resolved secrets (global + the agent's project) as env vars.
adi-secrets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# A harness conversation mints a fresh session id (v4 UUID) for the Claude CLI to establish on the
# first turn and resume on every reply.
uuid = { workspace = true }
# The `harness:adi` loop calls a model provider's chat API over HTTP. Blocking client: each turn runs
# in a spawned `adi-mono harness-turn` child (a sync process), never inside the app server's runtime.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
# `adi.agents.*` payloads derive their JSON Schema; this crate also assembles the full event
# catalog (task events + agent events), the lowest crate that can see every producer's type.
schemars = { workspace = true }

[lints]
workspace = true
