[package]
name = "adi-app"
description = "The adi app: a Rust HTTP backend serving a control-panel SPA at / and a JSON API at /api, fronted by adi-hive at app.adi."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "adi-app"
path = "src/main.rs"

[dependencies]
# The /api contract + server handlers; the `server` feature pulls in the port registry.
adi-webapp-api = { workspace = true, features = ["server"] }

# Constructing the live port registry the handlers operate on.
adi-ports-manager = { workspace = true }

# The shared design system, inlined into server-rendered pages (the placeholder / any
# future front-door page) so they match the webapp.
adi-css = { workspace = true }

# The webapp's Trunk build output (`crates/adi-webapp/dist`), embedded at compile time so
# the binary is self-contained — no runtime asset paths.
include_dir = "0.7"

# Async runtime for the hand-rolled HTTP/1.1 server (same lightweight approach as
# adi-hive — no web framework). `fs` powers the ADI_WEBAPP_DIST disk-serve dev mode.
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "time", "io-util", "fs"] }

# Logging to stdout/stderr (captured by the supervisor).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[lints]
workspace = true
