[package]
name = "adi-app"
description = "The adi app: a Rust HTTP backend serving a control-panel SPA at / and a JSON API at /api, fronted by adi-hive at app.adi."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "adi-app"
path = "src/main.rs"

[dependencies]
# The /api contract + server handlers; the `server` feature pulls in the port registry.
adi-webapp-api = { workspace = true, features = ["server"] }

adi-ports-manager = { workspace = true }

adi-projects = { workspace = true }

adi-secrets = { workspace = true }

adi-tasks = { workspace = true }

adi-tools = { workspace = true }

adi-agents = { workspace = true }

adi-triggers = { workspace = true }

adi-events = { workspace = true }

adi-mesh = { workspace = true }

adi-css = { workspace = true }

# The webapp's Trunk build output (`crates/adi-webapp/dist`), embedded at compile time so
# the binary is self-contained — no runtime asset paths.
include_dir = "0.7"

tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "time", "io-util", "fs", "sync"] }

# Server-side OAuth-secret refresh: adi-app calls the OAuth router's /refresh/<provider> so
# the refresh token never reaches the browser. rustls to avoid a system OpenSSL dependency.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = { workspace = true }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[lints]
workspace = true
