[package]
name = "adi-core"
description = "Core shared library for the adi-family workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Read adi-dns's JSON status file and serialize the status report the GUI consumes.
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Validate that the generated front-door hive.yaml is well-formed YAML with the
# expected shape (catches indentation bugs in render_frontdoor_hive).
serde_yaml_ng = "0.10"

[lints]
workspace = true
