[package]
name = "adi-core"
description = "Core shared library for the adi-family workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }

adi-agents = { workspace = true }
adi-events = { workspace = true }
adi-tasks = { workspace = true }
adi-tools = { workspace = true }
adi-triggers = { workspace = true }

# The control-panel (adi-app) runs as a user LaunchAgent on a stable port taken from the
# ports manager; the front door proxies app.adi to that same reserved port.
adi-ports-manager = { workspace = true }

adi-projects = { workspace = true }

adi-secrets = { workspace = true }

adi-hooks = { workspace = true }

adi-update = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_yaml_ng = "0.10"

[lints]
workspace = true
