[package]
name = "adi-fs"
description = "An isolated, base-directory-jailed filesystem: browse, read, and atomically write files within a root, rejecting any path that climbs out (`..`, an absolute path, or a symlink escape)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true
