[package]
name = "adi-hooks"
description = "Project hooks and workspaces: script files under a project's `.adi/hooks` run detached (git-hooks style) to create the project's working copies, which are registered in its `.adi/workspaces.toml`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-osext = { workspace = true }
# Each workspace terminal is an in-process pty session (the cross-platform replacement for the
# external tmux server), observed and driven the same way agent sessions are.
adi-pty = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
