[package]
name = "adi-mesh"
description = "adi-family peer mesh over iroh: expose a machine's allow-listed local ports to authorized peers, and forward a local port to a peer's allowed port — peer-to-peer (QUIC + relay-assisted NAT traversal), no public IP required."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "adi-mesh"
path = "src/main.rs"

[dependencies]
adi-config = { workspace = true }

# The peer-to-peer transport: QUIC connections dialled by EndpointId, with relays doing
# NAT traversal and n0 discovery resolving an id to its current addresses.
iroh = { workspace = true }

clap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "io-util", "sync", "time"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[lints]
workspace = true
