[package]
name = "adi-ports-manager"
description = "Allocate and track TCP ports for adi services, avoiding reserved ranges and ports already live on the machine. Pure library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
