[package]
name = "adi-projects"
description = "Register and track adi projects: one metadata manifest (config.toml) per project directory under ~/.adi/mono/projects. Pure library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }

serde = { workspace = true }

uuid = { workspace = true }

[lints]
workspace = true
