[package]
name = "adi-secrets"
description = "Encrypted, scoped secrets for the adi platform: one AEAD-encrypted <name>.toml per secret under ~/.adi/mono/secrets, in a global or per-project scope, resolved (project overrides global) into a run's environment. Pure library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }

serde = { workspace = true }

# Authenticated encryption for secret values at rest (XChaCha20-Poly1305) + base64 for the
# stored nonce/ciphertext and the master-key file.
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
